--- a/catalog.html
+++ b/catalog.html
@@ -651,7 +651,7 @@
           </ul>
         </div>
         <div class="tab-content">
-          <div id="filter-list">
+          <div class="active" id="filter-list">
             <div class="container">
               <div class="row">
                 <div class="col-md-6 col-lg-4"><a class="object-item" href="#">
@@ -1288,7 +1288,7 @@
               </div>
             </div>
           </div>
-          <div class="active" id="filter-map">
+          <div id="filter-map">
             <div class="map" id="map-location"></div>
             <div id="map-content">
               <div class="object-item" data-lat="25.771162" data-lng="-80.224623">
