--- a/legal-advice.html
+++ b/legal-advice.html
@@ -105,7 +105,7 @@
               </div>
               <div class="google-location">
                 <label for="location-popup"></label>
-                <input type="text" placeholder="Location" id="location-popup">
+                <input class="location-autocomplete-4" type="text" placeholder="Location" id="location-popup">
               </div>
             </div>
           </div>
@@ -193,7 +193,7 @@
               </div>
               <div class="google-location">
                 <label for="location2-popup"></label>
-                <input type="text" placeholder="Location" id="location2-popup">
+                <input class="location-autocomplete-5" type="text" placeholder="Location" id="location2-popup">
               </div>
             </div>
           </div>
@@ -256,7 +256,7 @@
               </div>
               <div class="google-location">
                 <label for="location3-popup"></label>
-                <input type="text" placeholder="Location" id="location3-popup">
+                <input class="location-autocomplete-6" type="text" placeholder="Location" id="location3-popup">
               </div>
             </div>
           </div>
@@ -411,13 +411,31 @@
               <h3>Fill the form</h3>
               <p class="mb-32 description">Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus vestibulum ac diam sit amet quam vehicula elementum.</p>
               <form>
-                <input type="text" placeholder="Name">
-                <input type="text" placeholder="Email" value="email@mail.com">
-                <textarea placeholder="Your message"></textarea>
+                <input type="text" placeholder="Name" required>
+                <input type="phone" placeholder="Phone" required>
+                <input type="email" placeholder="Email" required>
+                <div class="dropdown search-checked-input">
+                  <button class="dropdown-toggle" type="button"><span class="default">Theme</span><strong class="selected"></strong></button>
+                  <div class="dropdown-menu">
+                    <div class="items-line checked-item">
+                      <input name="property-type" type="radio" id="property-type-1">
+                      <label for="property-type-1">Type 1</label>
+                    </div>
+                    <div class="items-line checked-item">
+                      <input name="property-type" type="radio" id="property-type-2">
+                      <label for="property-type-2">Type 2</label>
+                    </div>
+                    <div class="items-line checked-item">
+                      <input name="property-type" type="radio" id="property-type-3">
+                      <label for="property-type-3">Type 3</label>
+                    </div>
+                  </div>
+                </div>
+                <textarea placeholder="Your message" required></textarea>
                 <div class="btn-group">
                   <button class="btn">Send</button>
                   <div class="chekcbox">
-                    <input type="checkbox" name="deal-type-checkbox" id="checkbox-form-1">
+                    <input type="checkbox" name="deal-type-checkbox" required checked id="checkbox-form-1">
                     <label for="checkbox-form-1">I agree to<a class="link-underline" href="#">the terms</a>of processing personal data</label>
                   </div>
                 </div>
@@ -432,7 +450,7 @@
       <div class="container">
         <div class="top-footer d-flex"><a class="logo" href="#"><img src="img/logo-full.svg" alt="logo-footer"/></a>
           <div class="flex-grow-1">
-            <div class="group-links"><a href="#">Sale</a><a href="#">Rent</a><a href="#">Rating</a><a class="active" href="#">Order a photographer</a><a href="#">Contact a specialist</a><a href="#">Legal advice</a><a href="#">Package of documents</a><a href="#">Closed database</a></div>
+            <div class="group-links"><a href="#">Sale</a><a href="#">Rent</a><a href="#">Rating</a><a href="#">Order a photographer</a><a href="#">Contact a specialist</a><a href="#">Legal advice</a><a href="#">Package of documents</a><a href="#">Closed database</a></div>
             <div class="group-links"><a href="#">About us</a><a href="#">Contact us</a></div>
             <div class="group-links mobile-top-line"><a href="#">Ad policies</a><a href="#">Privacy policy</a><a href="#">Terms of use</a></div>
           </div>
@@ -445,8 +463,7 @@
             <div class="meta-language">
               <div class="d-flex">
                 <div>Разработка сайта</div>
-                <div class="ml-2"><img src="img/meta.svg" alt="meta logo"/>
-                </div>
+                <div class="ml-2"><a href="#"><img src="img/meta.svg" alt="meta logo"/></a></div>
               </div>
               <div class="dropdown language ml-4">
                 <button class="dropdown-toggle" type="button">English</button>
