--- a/profile-add-offer.html
+++ b/profile-add-offer.html
@@ -105,7 +105,7 @@
               </div>
               <div class="google-location">
                 <label for="location-popup"></label>
-                <input type="text" placeholder="Location" id="location-popup">
+                <input class="location-autocomplete-4" type="text" placeholder="Location" id="location-popup">
               </div>
             </div>
           </div>
@@ -193,7 +193,7 @@
               </div>
               <div class="google-location">
                 <label for="location2-popup"></label>
-                <input type="text" placeholder="Location" id="location2-popup">
+                <input class="location-autocomplete-5" type="text" placeholder="Location" id="location2-popup">
               </div>
             </div>
           </div>
@@ -256,7 +256,7 @@
               </div>
               <div class="google-location">
                 <label for="location3-popup"></label>
-                <input type="text" placeholder="Location" id="location3-popup">
+                <input class="location-autocomplete-6" type="text" placeholder="Location" id="location3-popup">
               </div>
             </div>
           </div>
@@ -690,9 +690,16 @@
                     <button class="info-btn text" type="button">About posting photos</button>
                     <div class="info-text">
                       <ul>
-                        <li>Photos with watermarks, other people's objects and advertising banners are<a href="#">not allowed to be placed</a></li>
-                        <li>Image formats<a href="#">JPG</a>or<a href="#">PNG</a></li>
-                        <li>Maximum file size<a href="#">1 mb</a></li>
+                        <li>Photos with watermarks, other people's objects and advertising banners are
+                          <div class="underline">not allowed to be placed</div>
+                        </li>
+                        <li>Image formats
+                          <div class="underline">JPG</div>or
+                          <div class="underline">PNG</div>
+                        </li>
+                        <li>Maximum file size
+                          <div class="underline">1 mb</div>
+                        </li>
                       </ul>
                     </div>
                   </div>
@@ -805,7 +812,7 @@
 </svg>
                   Title and description
                 </h4>
-                <input value="Apartment for sale “Calypso”">
+                <input placeholder="Title" value="Apartment for sale “Calypso”">
                 <div class="textarea-count">
                   <textarea maxlength="3000" placeholder="Tell us in what condition the floors, windows, plumbing, whether counters are installed; whether there was a redevelopment; how long the apartment is owned and how many owners; what are your neighbors."></textarea>
                   <div class="count-item"><span class="count">0</span><span class="max-count">/ 3000</span></div>
@@ -887,9 +894,10 @@
             <aside class="aside-profile">
               <div class="box-white br-8">
                 <h6 class="title-box">
-                  <svg width="30" height="26" viewBox="0 0 30 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M1.66602 1H9.66602C11.0805 1 12.4371 1.5619 13.4373 2.5621C14.4374 3.56229 14.9993 4.91885 14.9993 6.33333V25C14.9993 23.9391 14.5779 22.9217 13.8278 22.1716C13.0776 21.4214 12.0602 21 10.9993 21H1.66602V1Z" stroke="#13AD89" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-    <path d="M28.3333 1H20.3333C18.9188 1 17.5623 1.5619 16.5621 2.5621C15.5619 3.56229 15 4.91885 15 6.33333V25C15 23.9391 15.4214 22.9217 16.1716 22.1716C16.9217 21.4214 17.9391 21 19 21H28.3333V1Z" stroke="#13AD89" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="#69C0AC" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+<path d="M12 16V12" stroke="#69C0AC" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+<path d="M12 8L12 7" stroke="#69C0AC" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
                   Posting Rules
                 </h6>
@@ -917,7 +925,7 @@
       <div class="container">
         <div class="top-footer d-flex"><a class="logo" href="#"><img src="img/logo-full.svg" alt="logo-footer"/></a>
           <div class="flex-grow-1">
-            <div class="group-links"><a href="#">Sale</a><a href="#">Rent</a><a href="#">Rating</a><a class="active" href="#">Order a photographer</a><a href="#">Contact a specialist</a><a href="#">Legal advice</a><a href="#">Package of documents</a><a href="#">Closed database</a></div>
+            <div class="group-links"><a href="#">Sale</a><a href="#">Rent</a><a href="#">Rating</a><a href="#">Order a photographer</a><a href="#">Contact a specialist</a><a href="#">Legal advice</a><a href="#">Package of documents</a><a href="#">Closed database</a></div>
             <div class="group-links"><a href="#">About us</a><a href="#">Contact us</a></div>
             <div class="group-links mobile-top-line"><a href="#">Ad policies</a><a href="#">Privacy policy</a><a href="#">Terms of use</a></div>
           </div>
@@ -930,8 +938,7 @@
             <div class="meta-language">
               <div class="d-flex">
                 <div>Разработка сайта</div>
-                <div class="ml-2"><img src="img/meta.svg" alt="meta logo"/>
-                </div>
+                <div class="ml-2"><a href="#"><img src="img/meta.svg" alt="meta logo"/></a></div>
               </div>
               <div class="dropdown language ml-4">
                 <button class="dropdown-toggle" type="button">English</button>
