--- a/profile.html
+++ b/profile.html
@@ -105,7 +105,7 @@
               </div>
               <div class="google-location">
                 <label for="location-popup"></label>
-                <input type="text" placeholder="Location" id="location-popup">
+                <input class="location-autocomplete-4" type="text" placeholder="Location" id="location-popup">
               </div>
             </div>
           </div>
@@ -193,7 +193,7 @@
               </div>
               <div class="google-location">
                 <label for="location2-popup"></label>
-                <input type="text" placeholder="Location" id="location2-popup">
+                <input class="location-autocomplete-5" type="text" placeholder="Location" id="location2-popup">
               </div>
             </div>
           </div>
@@ -256,7 +256,7 @@
               </div>
               <div class="google-location">
                 <label for="location3-popup"></label>
-                <input type="text" placeholder="Location" id="location3-popup">
+                <input class="location-autocomplete-6" type="text" placeholder="Location" id="location3-popup">
               </div>
             </div>
           </div>
@@ -374,7 +374,8 @@
           <div class="mobile-show">
             <h1 class="text-center">Profile</h1>
           </div>
-          <div class="person m-auto" style="background-image: url(img/person.jpg)"></div>
+          <input type="file" id="person-file" hidden>
+          <label class="person m-auto" style="background-image: url(img/person.jpg)" for="person-file"></label>
           <div class="mt-16 mobile-hide"><strong class="email">name.lastname1965@gmail.com</strong></div>
           <div class="line mobile-hide"></div>
           <ul class="mobile-hide">
@@ -514,7 +515,7 @@
       <div class="container">
         <div class="top-footer d-flex"><a class="logo" href="#"><img src="img/logo-full.svg" alt="logo-footer"/></a>
           <div class="flex-grow-1">
-            <div class="group-links"><a href="#">Sale</a><a href="#">Rent</a><a href="#">Rating</a><a class="active" href="#">Order a photographer</a><a href="#">Contact a specialist</a><a href="#">Legal advice</a><a href="#">Package of documents</a><a href="#">Closed database</a></div>
+            <div class="group-links"><a href="#">Sale</a><a href="#">Rent</a><a href="#">Rating</a><a href="#">Order a photographer</a><a href="#">Contact a specialist</a><a href="#">Legal advice</a><a href="#">Package of documents</a><a href="#">Closed database</a></div>
             <div class="group-links"><a href="#">About us</a><a href="#">Contact us</a></div>
             <div class="group-links mobile-top-line"><a href="#">Ad policies</a><a href="#">Privacy policy</a><a href="#">Terms of use</a></div>
           </div>
@@ -527,8 +528,7 @@
             <div class="meta-language">
               <div class="d-flex">
                 <div>Разработка сайта</div>
-                <div class="ml-2"><img src="img/meta.svg" alt="meta logo"/>
-                </div>
+                <div class="ml-2"><a href="#"><img src="img/meta.svg" alt="meta logo"/></a></div>
               </div>
               <div class="dropdown language ml-4">
                 <button class="dropdown-toggle" type="button">English</button>
